board(title) Valid, boardlike dev ing

--- a/src/main/resources/i18n/hr_en.properties
+++ b/src/main/resources/i18n/hr_en.properties
@@ -6,3 +6,4 @@ Size.uvo.upw= PW should be at least 5 and less than 50
 Size.uvo.uname= User Name should be at least 5 and less than 20
 Size.uto.uid= ID should be at least 1 and less than 20
 Size.uto.upw= PW should be at least 5 and less than 50
+Size.bvo.title= Title should be at least 1 
