글쓰기 - title,content jquery -> trim 공백 체크

--- a/src/main/resources/i18n/hr_ko.properties
+++ b/src/main/resources/i18n/hr_ko.properties
@@ -1,9 +1,9 @@
-NotBlank.uvo.uid= \uc544\uc774\ub514\ub97c \uc785\ub825\ud574\uc57c \ud569\ub2c8\ub2e4.
-NotBlank.uvo.upw= \ube44\ubc00\ubc88\ud638\ub97c \uc785\ub825\ud574\uc57c \ud569\ub2c8\ub2e4.
-NotBlank.uvo.uname= \uc774\ub984\uc744 \uc785\ub825\ud574\uc57c \ud569\ub2c8\ub2e4.
-Size.uvo.uid= 5~20 \uae00\uc790\ub85c \uc785\ub825
-Size.uvo.upw= 5~50 \uae00\uc790\ub85c \uc785\ub825
-Size.uvo.uname= 5~20 \uae00\uc790\ub85c \uc785\ub825
-Size.uto.uid= 1~20 \uae00\uc790\ub85c \uc785\ub825
-Size.uto.upw= 1~50 \uae00\uc790\ub85c \uc785\ub825
-Size.bvo.title= \uc81c\ubaa9\uc744 \ubc18\ub4dc\uc2dc \uc785\ub825\ud574\uc57c \ud569\ub2c8\ub2e4.
+NotBlank.uvo.uid= \uC544\uC774\uB514\uB97C \uC785\uB825\uD574\uC57C \uD569\uB2C8\uB2E4.
+NotBlank.uvo.upw= \uBE44\uBC00\uBC88\uD638\uB97C \uC785\uB825\uD574\uC57C \uD569\uB2C8\uB2E4.
+NotBlank.uvo.uname= \uC774\uB984\uC744 \uC785\uB825\uD574\uC57C \uD569\uB2C8\uB2E4.
+Size.uvo.uid= 5~20 \uAE00\uC790\uB85C \uC785\uB825
+Size.uvo.upw= 5~50 \uAE00\uC790\uB85C \uC785\uB825
+Size.uvo.uname= 5~20 \uAE00\uC790\uB85C \uC785\uB825
+Size.uto.uid= 1~20 \uAE00\uC790\uB85C \uC785\uB825
+Size.uto.upw= 1~50 \uAE00\uC790\uB85C \uC785\uB825
+Size.bvo.title= 1~35 \uAE00\uC790\uB85C \uC785\uB825
