--- a/src/main/resources/i18n/hr_en.properties
+++ b/src/main/resources/i18n/hr_en.properties
@@ -1,9 +1,13 @@
 NotBlank.uvo.uid= ID should not be Blank 
 NotBlank.uvo.upw= PW shouldn not be Blank
-NotBlank.uvo.uname= User Name shouldn not be Blank
+NotBlank.uvo.uname= User Name should not be Blank
+NotBlank.uvo.email= email should not be Blank
+NotBlank.uvo.email2= email should not be Blank
 Size.uvo.uid= ID should be at least 5 and less than 20
 Size.uvo.upw= PW should be at least 5 and less than 50
 Size.uvo.uname= User Name should be at least 5 and less than 20
 Size.uto.uid= ID should be at least 1 and less than 20
 Size.uto.upw= PW should be at least 5 and less than 50
 Size.bvo.title= Title should be at least 1 
+Size.uvo.email=Email should be at least 1 and less than 20
+Size.uvo.email2=Email should be at least 1 and less than 20
