--- a/src/main/resources/i18n/hr_ko.properties
+++ b/src/main/resources/i18n/hr_ko.properties
@@ -1,9 +1,14 @@
 NotBlank.uvo.uid= \uC544\uC774\uB514\uB97C \uC785\uB825\uD574\uC57C \uD569\uB2C8\uB2E4.
 NotBlank.uvo.upw= \uBE44\uBC00\uBC88\uD638\uB97C \uC785\uB825\uD574\uC57C \uD569\uB2C8\uB2E4.
 NotBlank.uvo.uname= \uC774\uB984\uC744 \uC785\uB825\uD574\uC57C \uD569\uB2C8\uB2E4.
+NotBlank.uvo.email = \uC774\uBA54\uC77C\uC744 \uC785\uB825\uD574\uC57C \uD569\uB2C8\uB2E4
+NotBlank.uvo.email2 =  \uC774\uBA54\uC77C\uC744 \uC785\uB825\uD574\uC57C \uD569\uB2C8\uB2E4
 Size.uvo.uid= 5~20 \uAE00\uC790\uB85C \uC785\uB825
 Size.uvo.upw= 5~50 \uAE00\uC790\uB85C \uC785\uB825
-Size.uvo.uname= 5~20 \uAE00\uC790\uB85C \uC785\uB825
+Size.uvo.uname= 2~20 \uAE00\uC790\uB85C \uC785\uB825
 Size.uto.uid= 1~20 \uAE00\uC790\uB85C \uC785\uB825
 Size.uto.upw= 1~50 \uAE00\uC790\uB85C \uC785\uB825
 Size.bvo.title= 1~35 \uAE00\uC790\uB85C \uC785\uB825
+Size.uvo.email=2~30 \uAE00\uC790\uB85C \uC785\uB825
+Size.uvo.email2=3~30 \uAE00\uC790\uB85C \uC785\uB825
+
