--- a/todo
+++ b/todo
@@ -41,3 +41,69 @@ Exception 처리 할 지 여부
 //1013
 
 AOP-> 어노테이션으로
+
+...
+
+// 181114
+
+next() 이거 대신에 find() 하는방법
+
+submit할떄 프론트에서 검사한번 하는것.
+
+이메일 db단에서도 중복못하게 만들것
+
+
+1.폼이 비어있거나, 글자수 체크해서 프론트에서 submit 못하도록.
+
+2.중복일경우 붉은글씨만 뜨는데 일단 submit 되는것을 방지하도록 하는 기능이 프론트에서 필요
+
+
+아이디 중복되거나 이런부분은 붉은글씨로 된것을 인식해서 올바르게 체크하라고 막아줘야함
+-> how to -> expression -> 속성값을 찾는방법
+
+이름도 중복 체크 해야하지않을까..
+
+
+기존의 인터셉터로 구현했던것들을 시큐리티로 옮길것
+
+listmail
+
+DAO다 지워야하나? Mapper쓰는데?
+
+이메일 db단에서도 중복못하게 만들것 -> unique
+
+admin2에 메시지가없는데 왜 그 페이징은 2페이지로? -> 에러있는듯 -> O
+
+쪽지 예전에 기능좀 구현하다가 충돌나서 다 지워진거.. 나중에..
+
+<< admin처리 >>
+
+수정전 변경한다. 기존의 로그인페이지에서 열쇠버튼 -> 새로운 폼의 재로그인 -> admin 계정확인
+
+수정후 -> 시큐리티 - 로그인페이지가 아닌 header > ROLE_ADMIN 권한일때 열쇠버튼 보이도록 -> 눌렀을때 바로 admin페이지 진입.
+
+
+181115
+
+successFail id -> class O
+
+admin security 처리, header부분에서  열쇠버튼 -> 부트스트랩 그리드수정 O
+
+userlist에서 권한-> 기존의 테이블권한 아닌 시큐리티 권한으로수정
+
+userlist에서 권한을 selected로 변경? , 가입일, 최근접속일, 게시글,덧글 갯수 카운트
+
+
+
+181116
+
+ROLE 이 여러개 적용 가능하니까.. 그에 맞춰서 userlist도 변해야하는건 맞는데 일단 기존의것대로 커스터마이징하고 이후에 생각할것..
+
+에러 -> 조인처리르 했는데 리턴에 UserVO인데 UserVO와 매핑이 안되니까 에러날수밖에.. 받는용으로만 authority를 살리던지아, 아니구나 jsp에서 List이름으로 바꾸면되구나..
+
+
+181118
+
+관리자 페이지 -> 회원권한 변경안되는것 수정
+
+권한 여러개 시도.
